# 07_GSaaS_Rust

./: .gitignore  alb.script  gsaas_vscode_workspace.code-workspace  orb_propagation_sample.scr
.codelite/: 07_GSaaS_Rust.db  07_GSaaS_Rust.session  gmat-codelite.session
01_GSaaS_R/: .gitignore  Cargo.toml  gsn_cortex_sim.py  readme.txt  readme_jwt.txt
01_GSaaS_R/config/: gsaas.json  log4rs.yaml
01_GSaaS_R/src/: main.rs
01_GSaaS_R/src/backup/: main_web_v0.rs  redirect.rs
02_FDSaaS_R/: Cargo.toml  readme.txt
02_FDSaaS_R/config/: fds_server-no-used.yaml  fdsaas.json  modules_definition-example.json
02_FDSaaS_R/data/: fdsaas.db
02_FDSaaS_R/doc/: login.txt  logout.txt  orb_propagation.html  register.html  register.txt
02_FDSaaS_R/log/: fdsaas.log.0
02_FDSaaS_R/migrations/2020-07-31-103738_create_posts/: up.sql
02_FDSaaS_R/migrations/2020-12-26-231637_fdsaas/: down.sql  up.sql
02_FDSaaS_R/src/: fds_messages.rs  main.rs  process_message_task.rs  users.rs  wait_for_task.rs
02_FDSaaS_R/src/db/: http_access.rs  mod.rs  models.rs  schema.rs  users.rs
02_FDSaaS_R/src/sql/: create_tables.sql
02_FDSaaS_R/test-modules/: mis1_orb_propag_20200502130000.csv  mis1_orb_propag_20200502130000.oem  msg_orb_propagation.json  msg_orb_propagation_example.json  orb_propagation_tle.json  run_script.json  run_script_demo.json  test_orb_propagation_tle.py  test_run_script.py  test_user.py
03_TM_Decoder/: Cargo.toml
03_TM_Decoder/config/: tm_decoder.json
03_TM_Decoder/src/: common.rs  main.rs
03_TM_Decoder/src/models/: api_messages.rs  frames.rs
07_GSaaS_Rust/: 07_GSaaS_Rust.workspace  gsaas_vscode_workspace.code-workspace
07_GSaaS_Rust/01_GSaaS_R/: Cargo.toml  WebContent  readme.txt
07_GSaaS_Rust/01_GSaaS_R/config/: gsaas.json
07_GSaaS_Rust/02_FDSaaS_R/: .env  Cargo.toml  kill_all.sh  readme.txt  stop_fds.sh
07_GSaaS_Rust/02_FDSaaS_R/config/: fdsaas.json  log4rs.yaml  modules_definition copy.json  modules_definition.json
07_GSaaS_Rust/02_FDSaaS_R/data/: fdsaas.db  fdsaas.db1  fdsaas.db_old
07_GSaaS_Rust/02_FDSaaS_R/doc/: orb_propagation.txt  orb_propagation_tle.html  orb_propagation_tle.txt  run_script.html  run_script.txt
07_GSaaS_Rust/02_FDSaaS_R/migrations/2020-12-26-231637_fdsaas/: down.sql  up.sql
07_GSaaS_Rust/02_FDSaaS_R/src/: config_fds.rs  fds_messages.rs  main.rs  modules_manager.rs  tasks_manager.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v0/: main_v0.rs  modules_manager_v0.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v1_20200724/: tasks_manager.rs  wait_for_task.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v2_20200726/: common.rs  fds_messages.rs  modules_manager.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v4_20201216/: fds_messages.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v5_20210103/: main.rs  modules_manager.rs  tasks_manager.rs  users.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v6_20210516/: authorization_manager.rs  http_access.rs  main.rs  modules_manager.rs  tasks_manager.rs  users.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v6_20210516/db/: mod.rs  models.rs  schema.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v6_20210516/sql/: create_tables.sql
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v7_20210722/: Readme.txt  claims.rs  config_fds.rs  fds_messages.rs  main.rs  modules_manager.rs  users.rs
07_GSaaS_Rust/02_FDSaaS_R/src/backup/v7_20210722/db/: schema.rs
07_GSaaS_Rust/02_FDSaaS_R/src/db/: http_access.rs  mod.rs  schema.rs
07_GSaaS_Rust/02_FDSaaS_R/test-modules/: login.json  logout.json  orb_propagator_config.json  register_user_demo.json  test_client.py
07_GSaaS_Rust/03_TM_Decoder/: Cargo.toml
07_GSaaS_Rust/03_TM_Decoder/src/: cortex_layer.rs  main.rs
07_GSaaS_Rust/03_TM_Decoder/src/models/: generic_frame.rs
07_GSaaS_Rust/04_Tools/: Cargo.toml  start.sh
07_GSaaS_Rust/04_Tools/config/: tools.json
07_GSaaS_Rust/04_Tools/data/: tools.db
07_GSaaS_Rust/04_Tools/doc/: login.txt  logout.txt  un-deregister.txt
07_GSaaS_Rust/04_Tools/migrations/2021-06-08-165530_create_db/: down.sql  up.sql
07_GSaaS_Rust/04_Tools/src/: authorization_manager.rs  config_tools.rs  main.rs
07_GSaaS_Rust/04_Tools/src/db/: mod.rs  satellite.rs  user.rs
07_GSaaS_Rust/04_Tools/test-modules/: create_mission.json  deregister_user_demo.json  exit.json  login.json  logout.json  test_user.py
07_GSaaS_Rust/04_Tools/test-modules/old/: msg_orb_propagation_example_tle.json  test.json
07_GSaaS_Rust/05_Common/: .env  Cargo.toml
07_GSaaS_Rust/05_Common/src/: claims.rs  common.rs  common_messages.rs  http_errors.rs  lib.rs
07_GSaaS_Rust/05_Common/src/data_structs/: ground_station.rs  license.rs  mission.rs  mod.rs  satellite.rs  user.rs
07_GSaaS_Rust/06_OrbPropag_TLE/: Cargo.toml  start.sh
10_KrakenD/: krakend-v0.json  krakend.json  krakend_readme.txt  start_kraken.sh
(+55 files in other folders)
