[package]
name = "fdsaas"
version = "0.1.0"
authors = ["Alberto Fernandez Garcia (External)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target-dir="~/Projects/07_GSaaS_Rust/target"

[dependencies]
common = { path = "../05_Common" }

log = "0.4.0"
log4rs = "0.10.0"

# JSON Web Toolkit
#jwt = "0.4.0"
jsonwebtoken = "7"

# Nanomsg
nng = "1.0.0-rc.2"

# SQLite
#rusqlite = "0.21.0"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
serde_derive = "1.0"

# HTTP Server
# Actix
actix-web = "3"
# actix-rt = "2"
# Required for serving static files
actix-files = "0.3"
actix-service = "1.0.5"
futures = "0.3"
mime="0.3"

uuid = { version = "0.8", features = ["serde", "v4"] }

# ORM, pool of connections
diesel = { version = "1.4.5", features = ["chrono", "sqlite", "r2d2", "uuidv07", "serde_json"] }
r2d2 = "0.8"
r2d2-diesel = "1.0.0"


# Avro
# avro-rs = "0.6.6"
# serde-avro = "0.5"
# avro-tools="0.1.1"



# Lazy static
lazy_static="1.4"

# SHA 
sha2 = "0.9"
#hex-literal = "0.3"
rand= "0.8"